@@ -30,10 +30,6 @@ div.search-api-edit-menu.collapsed {
   display: none;
 }
 
-input.search-api-cron-limit {
-  text-align: right;
-}
-
 .search-api-alter-add-aggregation-fields,
 .search-api-checkboxes-list {
   max-height: 12em;
