@@ -1,5 +1,7 @@
 Search API 1.x, dev (xx/xx/xxxx):
 ---------------------------------
+- #1225620 by drunken monkey: Added Batch API integration for the "Index now"
+  functionality.
 - #1777710 by dasjo: Remove dependency on $_GET['q'] for determining base paths.
 - #1715238 by jsacksick: Fixed fulltext argument handler field list is broken.
 - #1414138 by drunken monkey: Fixed internal static index property cache.
